--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,8 @@
     transform: rotate(360deg);
   }
 }
+
+#hexagon:hover {
+  transition: all 300ms;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
