--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -30,4 +30,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+polygon#hexagon:hover {
+  fill: red !important;
+  stroke-width: 4;
 }
