Revert to older version and gradually add back features to prevent failure in deployment

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,11 @@
   }
 }
 
-/* polygon#hexagon:hover {
+#hexagon {
+  pointer-events: all;
+}
+
+/* polygon:hover {
   fill: red !important;
   stroke-width: 4;
 } */
